// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  className="Radio__RadioContainer-sc-3ox61a-1 bMQSTk"
  disabled={false}
>
  <input
    checked={null}
    className="Radio__RadioInput-sc-3ox61a-2 bFDhxp"
    id="radio"
    name="standard"
    onBlur={null}
    onChange={null}
    onFocus={null}
    type="radio"
    value={null}
  />
  <label
    className="Typography__StyledLabel-sc-19auepv-0 hgjjkQ"
    cursor="pointer"
    fontSize="0.875rem"
    fontWeight={400}
    htmlFor="radio"
    letterSpacing=".5px"
  >
    Radio
  </label>
</div>
`;

exports[` 2`] = `
Array [
  <div
    className="Bar__BarLayout-icfo76-2 eIFIfS"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__Slot-icfo76-1 hCkezQ"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-check fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 kWRDZo"
        color="success80"
        data-icon="check"
        data-prefix="far"
        focusable="false"
        fontSize="1.35em"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M435.848 83.466L172.804 346.51l-96.652-96.652c-4.686-4.686-12.284-4.686-16.971 0l-28.284 28.284c-4.686 4.686-4.686 12.284 0 16.971l133.421 133.421c4.686 4.686 12.284 4.686 16.971 0l299.813-299.813c4.686-4.686 4.686-12.284 0-16.971l-28.284-28.284c-4.686-4.686-12.284-4.686-16.97 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="Bar__Slot-icfo76-1 yvaBx"
    >
      <div
        className="Radio__RadioContainer-sc-3ox61a-1 bMQSTk"
        disabled={false}
      >
        <input
          checked={null}
          className="Radio__RadioInput-sc-3ox61a-2 bFDhxp"
          id="brief"
          name="guidelines"
          onBlur={null}
          onChange={null}
          onFocus={null}
          type="radio"
          value={null}
        />
        <label
          className="Typography__StyledLabel-sc-19auepv-0 hgjjkQ"
          cursor="pointer"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor="brief"
          letterSpacing=".5px"
        >
          Brief Label
        </label>
      </div>
    </div>
  </div>,
  <div
    className="Bar__BarLayout-icfo76-2 eIFIfS"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__Slot-icfo76-1 hCkezQ"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 eizlsd"
        color="alert80"
        data-icon="times"
        data-prefix="far"
        focusable="false"
        fontSize="1.35em"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="Bar__Slot-icfo76-1 yvaBx"
    >
      <div
        className="Radio__RadioContainer-sc-3ox61a-1 bMQSTk"
        disabled={false}
      >
        <input
          checked={null}
          className="Radio__RadioInput-sc-3ox61a-2 bFDhxp"
          id="long"
          name="guidelines"
          onBlur={null}
          onChange={null}
          onFocus={null}
          type="radio"
          value={null}
        />
        <label
          className="Typography__StyledLabel-sc-19auepv-0 hgjjkQ"
          cursor="pointer"
          fontSize="0.875rem"
          fontWeight={400}
          htmlFor="long"
          letterSpacing=".5px"
        >
          Radio with a long label because you cannot be concise with your words.
        </label>
      </div>
    </div>
  </div>,
]
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs"
  id={null}
  rows={null}
>
  <div
    className="Radio__RadioContainer-sc-3ox61a-1 bMQSTk"
    disabled={false}
  >
    <input
      checked={true}
      className="Radio__RadioInput-sc-3ox61a-2 bFDhxp"
      id="Selected"
      name="states"
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="radio"
      value={null}
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hgjjkQ"
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor="Selected"
      letterSpacing=".5px"
    >
      Selected
    </label>
  </div>
  <div
    className="Radio__RadioContainer-sc-3ox61a-1 bMQSTk"
    disabled={false}
  >
    <input
      checked={null}
      className="Radio__RadioInput-sc-3ox61a-2 bFDhxp"
      id="Unselected"
      name="states"
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="radio"
      value={null}
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hgjjkQ"
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor="Unselected"
      letterSpacing=".5px"
    >
      Unselected
    </label>
  </div>
  <div
    className="Radio__RadioContainer-sc-3ox61a-1 cCsbQj"
    disabled={true}
  >
    <input
      checked={null}
      className="Radio__RadioInput-sc-3ox61a-2 BLUjR"
      id="Disabled"
      name="states"
      onBlur={null}
      onChange={null}
      onFocus={null}
      tabIndex="-1"
      type="radio"
      value={null}
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hgjjkQ"
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor="Disabled"
      letterSpacing=".5px"
    >
      Disabled
    </label>
  </div>
</section>
`;

exports[` 4`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs"
  id={null}
  rows={null}
>
  <div
    className="Radio__RadioContainer-sc-3ox61a-1 bMQSTk"
    disabled={false}
  >
    <input
      checked={null}
      className="Radio__RadioInput-sc-3ox61a-2 bFDhxp"
      id="Left Aligned"
      name="alignment"
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="radio"
      value={null}
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hgjjkQ"
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor="Left Aligned"
      letterSpacing=".5px"
    >
      Left Aligned
    </label>
  </div>
  <div
    className="Radio__RadioContainer-sc-3ox61a-1 kgdvMM"
    disabled={false}
  >
    <input
      checked={null}
      className="Radio__RadioInput-sc-3ox61a-2 bFDhxp"
      id="Right Aligned"
      name="alignment"
      onBlur={null}
      onChange={null}
      onFocus={null}
      type="radio"
      value={null}
    />
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hgjjkQ"
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor="Right Aligned"
      letterSpacing=".5px"
    >
      Right Aligned
    </label>
  </div>
</section>
`;

exports[` 5`] = `
<form
  action={null}
  className="Form__FormWrapper-v2wrel-1 jozDvZ"
  id={null}
  method={null}
  onSubmit={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Form__Inputs-v2wrel-4 kAjljR"
    id={null}
    rows={null}
  >
    <section
      className="Form__Section-v2wrel-0 XxWIM"
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 ggZUaJ Form__TitleSection-v2wrel-3 gHAabJ"
        fontSize="0.875rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.25px"
      >
        Radio Group (2 Columns)
      </p>
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Form__Inputs-v2wrel-4 kAjljR"
        id={null}
        rows={null}
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Radio__RadioWrapper-sc-3ox61a-0 kzzMRw"
          id={null}
          rows={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 cRSilm Radio__InputGroup-sc-3ox61a-3 dyYMNc"
            id={null}
            rows={null}
          >
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 bMQSTk"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 bFDhxp"
                id="radio-1"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="1"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 hgjjkQ"
                cursor="pointer"
                fontSize="0.875rem"
                fontWeight={400}
                htmlFor="radio-1"
                letterSpacing=".5px"
              >
                Radio 1
              </label>
            </div>
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 bMQSTk"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 bFDhxp"
                id="radio-2"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="2"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 hgjjkQ"
                cursor="pointer"
                fontSize="0.875rem"
                fontWeight={400}
                htmlFor="radio-2"
                letterSpacing=".5px"
              >
                Radio 2
              </label>
            </div>
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 bMQSTk"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 bFDhxp"
                id="radio-3"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="3"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 hgjjkQ"
                cursor="pointer"
                fontSize="0.875rem"
                fontWeight={400}
                htmlFor="radio-3"
                letterSpacing=".5px"
              >
                Radio 3
              </label>
            </div>
            <div
              className="Radio__RadioContainer-sc-3ox61a-1 bMQSTk"
              disabled={false}
            >
              <input
                checked={null}
                className="Radio__RadioInput-sc-3ox61a-2 bFDhxp"
                id="radio-4"
                name="radio-group"
                onBlur={null}
                onChange={null}
                onFocus={null}
                type="radio"
                value="4"
              />
              <label
                className="Typography__StyledLabel-sc-19auepv-0 hgjjkQ"
                cursor="pointer"
                fontSize="0.875rem"
                fontWeight={400}
                htmlFor="radio-4"
                letterSpacing=".5px"
              >
                Radio 4
              </label>
            </div>
          </section>
        </section>
      </section>
    </section>
  </section>
</form>
`;
